--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body{
 }
 
 .bienvenida{
-    background-image: url("imagenes/fondo-bienvenida.jpg");
+    background-image: url(https://static.vecteezy.com/system/resources/previews/012/680/914/non_2x/old-black-brick-wall-texture-for-background-with-copy-space-for-design-dark-wallpaper-free-photo.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
